[package]
name = "polyanya"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["pathfinding"]
readme = "README.md"
description = "Polygon Any Angle Pathfinding"
repository = "https://github.com/vleue/polyanya"
homepage = "https://github.com/vleue/polyanya"
documentation = "https://docs.rs/polyanya"
categories = ["game-development"]

[features]
default = ["async"]
stats = []
verbose = []
async = []

[dependencies]
tracing = { version = "0.1", optional = true }
hashbrown = { version = "0.12" }
glam = { version = "0.21.3", features = ["approx"] }
indexmap = "1.9"
smallvec = { version = "1.9", features = ["union", "const_generics"] }
# radix-heap = { version = "0.4.2", features = ["ordered-float"] }
radix-heap = { git = "https://github.com/Elabajaba/radix-heap.git", branch = "better-msg", features = ["ordered-float"]}
ordered-float = "2.8.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
# criterion = "0.4"
tracing-tracy = "0.10"
tracing-subscriber = "0.3"
tracing = "0.1"


[[bench]]
name = "path"
harness = false

[[bench]]
name = "no_path"
harness = false

[[bench]]
name = "is_in_mesh"
harness = false

[[bench]]
name = "baking"
harness = false
